--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,7 @@ http {
     #gzip  on;
 
     server {
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
         listen         80;
         return 301 https://$host$request_uri;
     }
