--- a/Dockerfile.proxy_protocol
+++ b/Dockerfile.proxy_protocol
@@ -1,8 +1,5 @@
-FROM nginx:1.11-alpine
-MAINTAINER Micheal Waltz <mwaltz@demandbase.com>
+FROM nginx:1.15-alpine
+LABEL maintainer="Demandbase DevOps <devops@demandbase.com>"
 
 # Add in the config
 COPY nginx.conf.proxy_protocol /etc/nginx/nginx.conf
-
-#Start nginx
-ENTRYPOINT ["nginx"]
