run as user daemon

--- a/Dockerfile.proxy_protocol
+++ b/Dockerfile.proxy_protocol
@@ -3,3 +3,7 @@ LABEL maintainer="Demandbase DevOps <devops@demandbase.com>"
 
 # Add in the config
 COPY nginx.conf.proxy_protocol /etc/nginx/nginx.conf
+
+# Run as non-root user
+RUN chown -R daemon /var/cache/nginx/ /run
+USER daemon
