--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ http {
 
     sendfile        on;
     keepalive_timeout  65;
-    error_log /dev/stdout info;
+    error_log /dev/stderr warn;
     access_log /dev/stdout;
 
     #gzip  on;
